syntax = "proto3";

package ares.messaging;

import "Templates/CampaignTemplate.proto";
import "google/protobuf/empty.proto";
import "AnalyzerInfo.proto";
import "Templates/CommandMetadata.proto";

service AresValidation {
	rpc ValidateFullCampaign(CampaignTemplate) returns (ValidationResponse);
	rpc ValidateAnalyzerSelection(AnalyzerValidationRequest) returns (ValidationResponse);
	rpc VlidateRegisteredDevices(google.protobuf.Empty) returns (.ares.messaging.ValidationResponse);
}

message AnalyzerValidationRequest {
	AnalyzerInfo analyzer = 1;
	CommandMetadata output_command_metadata = 2;
}

message ValidationResponse {
	bool success = 1;
	repeated string messages = 2;
}