syntax = "proto3";

package ares.messaging;

import "google/protobuf/wrappers.proto";

message OutputMetadata {
	google.protobuf.StringValue unique_id = 1; // A unique id for this metadata
	string full_name = 2; // Name of the return message type including the namespace
	string description = 3; // Provides a human readable text describing the output
	int64 index = 4; // Index of the collection in which executed this template
}